k8s/runtimecrm/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: runtimecrm
  labels:
    app: console
spec:
  type: ClusterIP
  selector:
    app: console
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
